# Rapid-Games-Prototyping

./: .gitmodules  LICENSE
2 - A Virtual Being/: .gitignore  CMakeLists.txt  cpystory.cmd
2 - A Virtual Being/source/beingEngine/application/: application.cpp  application.hpp  window.cpp  window.hpp
2 - A Virtual Being/source/beingEngine/core/: core.hpp  entry.cpp  glfw.cpp  glfw.hpp
2 - A Virtual Being/source/beingEngine/math/: matrix.hpp  matrix.ipp  matrix4.cpp  matrix4.hpp  vector2.hpp  vector3.hpp
2 - A Virtual Being/source/beingEngine/rendering/instance/: instance.cpp  instance.hpp  instanceData.hpp
2 - A Virtual Being/source/beingEngine/rendering/mesh/: mesh.cpp  mesh.hpp  meshStaticData.hpp
2 - A Virtual Being/source/beingEngine/rendering/processingStack/: processingLayer.cpp  processingLayer.hpp  processingStack.cpp  processingStack.hpp
2 - A Virtual Being/source/beingEngine/rendering/renderer/: renderInstance.cpp  renderInstance.hpp  renderer.cpp  renderer.hpp
2 - A Virtual Being/source/beingEngine/rendering/shader/: shader.cpp  shader.hpp  shaderAttribute.hpp  shaderUniform.hpp
2 - A Virtual Being/source/beingEngine/rendering/uniformBuffer/: uniformBuffer.cpp  uniformBuffer.hpp
2 - A Virtual Being/source/beingEngine/systems/: file.cpp  file.hpp  input.cpp  input.hpp  time.cpp  time.hpp
2 - A Virtual Being/source/beingEngine/window/: window.cpp  window.hpp
2 - A Virtual Being/source/virtualGame/application/: application.cpp  application.hpp  textRenderer.cpp  textRenderer.hpp
2 - A Virtual Being/source/virtualGame/assets/: shader.fs  shader.vs  story.txt
2 - A Virtual Being/source/virtualGame/assets/postProcessing/: crtCurve.fs  crtCurve.vs  crtDots.fs  crtDots.vs  test.fs  test.vs
2 - A Virtual Being/source/virtualGame/assets/shaders/: button.fs  button.vs  text.fs  text.vs
2 - A Virtual Being/source/virtualGame/embeds/: crtDots.ipp  crtMap.ipp  embeds.cpp  embeds.hpp  font.ipp
2 - A Virtual Being/source/virtualGame/postProcessing/: crtCurve.hpp  crtDots.hpp  test.hpp
2 - A Virtual Being/source/virtualGame/story/character/: character.cpp  character.hpp
2 - A Virtual Being/source/virtualGame/story/interpreter/: interpreter.cpp  interpreter.hpp
2 - A Virtual Being/source/virtualGame/story/textRenderer/: textRenderer.cpp  textRenderer.hpp
